Higher contrast. Serif font for articles. Add some links

--- a/resume.html
+++ b/resume.html
@@ -257,6 +257,9 @@
         
       </div>
     </section>
+    <footer>
+      <p>This page is <a href="http://jeffhuang.com/designed_to_last/">designed to last</a>.</p>
+    </footer>
   </main>
 </body>
 </html>
