--- a/how_to_establish_a_llc_in_czechia.html
+++ b/how_to_establish_a_llc_in_czechia.html
@@ -66,6 +66,9 @@
         </p>
       </article>
     </section>
+    <footer>
+      <p>This page is <a href="http://jeffhuang.com/designed_to_last/">designed to last</a>.</p>
+    </footer>
   </main> 
 </body>
 </html>
