--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     
     <header>
       <h1>Hey there</h1>
-      <p class="center">Welcome to my little piece of the Internet</p>
+      <p class="center">Welcome to my little piece of the Internet. Please <a href="https://makefrontendshitagain.party/">keep it weird</a>.</p>
     </header>
     
     <section id="about">
@@ -52,6 +52,11 @@
       <p>This page is totally about me. Expect highly-opinionated posts (rants) about <a href="https://www.youtube.com/watch?v=ObisQoGN6Cc">IT</a>, my travels and occasional recipes (yay, I love cooking). Why 46692? <a href="https://www.youtube.com/watch?v=t1WSD_cnRbA">No reason</a>, I just like the <a href="https://en.wikipedia.org/wiki/Feigenbaum_constants">number</a>. You can contact me via <a href="mailto:rhubinak@tuta.io">e-mail</a>.</p>
 
     </section>
+
+    <footer>
+      <p>This page is <a href="http://jeffhuang.com/designed_to_last/">designed to last</a>.</p>
+    </footer>
+
   </main>
 </body>
 </html>
