--- a/posts.html
+++ b/posts.html
@@ -53,6 +53,9 @@
       </article>
     
     </section>
+    <footer>
+      <p>This page is <a href="http://jeffhuang.com/designed_to_last/">designed to last</a>.</p>
+    </footer>
   </main> 
 </body>
 </html>
