--- a/resume.html
+++ b/resume.html
@@ -114,11 +114,19 @@
       
       <div id="timeline">
 
+        <div class="timeline-container timeline-right">
+          <div class="timeline-content">
+            <p>November 2022</p><br>
+            <h3>Microsoft Certified: Azure Administrator Associate</h3>
+            <p>Cloud things in Azure: a cloud equivalent of the short bus</p>
+          </div>
+        </div>        
+
         <div class="timeline-container timeline-left">
           <div class="timeline-content">
             <p>December 2021</p><br>
             <h3>AWS Certified Solutions Architect – Associate</h3>
-            <p>Cloud things</p>
+            <p>Cloud things from a bookseller</p>
           </div>
         </div>
 
