--- a/resume.html
+++ b/resume.html
@@ -117,7 +117,7 @@
         <div class="timeline-container timeline-right">
           <div class="timeline-content">
             <p>November 2022</p><br>
-            <h3>Microsoft Certified: Azure Administrator Associate</h3>
+            <h3><a href="https://learn.microsoft.com/en-us/certifications/azure-administrator/">Microsoft Certified: Azure Administrator Associate</a></h3>
             <p>Cloud things in Azure: a cloud equivalent of the short bus</p>
           </div>
         </div>        
@@ -125,7 +125,7 @@
         <div class="timeline-container timeline-left">
           <div class="timeline-content">
             <p>December 2021</p><br>
-            <h3>AWS Certified Solutions Architect – Associate</h3>
+            <h3><a href="https://www.credly.com/badges/03e33e32-dfad-42e3-ad24-144cc37d0d88">AWS Certified Solutions Architect – Associate</a></h3>
             <p>Cloud things from a bookseller</p>
           </div>
         </div>
