--- a/resume.html
+++ b/resume.html
@@ -117,7 +117,7 @@
         <div class="timeline-container timeline-right">
           <div class="timeline-content">
             <p>November 2022</p><br>
-            <h3><a href="https://learn.microsoft.com/en-us/certifications/azure-administrator/">Microsoft Certified: Azure Administrator Associate</a></h3>
+            <h3><a href="https://www.credly.com/earner/earned/badge/6b503e66-794d-4cd5-ad7b-f753b07dbd75">Microsoft Certified: Azure Administrator Associate</a></h3>
             <p>Cloud things in Azure: a cloud equivalent of the short bus</p>
           </div>
         </div>        
