--- a/resume.html
+++ b/resume.html
@@ -116,8 +116,8 @@
 
         <div class="timeline-container timeline-right">
           <div class="timeline-content">
-            <p>November 2022</p><br>
-            <h3><a href="https://www.credly.com/badges/5b912a7e-a414-4675-94d5-d3c56512d18f">Microsoft Certified: Azure Administrator Associate</a></h3>
+            <p>December 2023</p><br>
+            <h3><a href="https://www.credly.com/badges/28933f3a-9a55-4922-87b6-9876f4f905b9">Microsoft Certified: DevOps Engineer Expert</a></h3>
             <p>Cloud things in Azure: a cloud equivalent of the short bus</p>
           </div>
         </div>        
@@ -134,7 +134,7 @@
           <div class="timeline-content">
             <p>September 2020 -</p><br>
             <h3><a href="https://platform.sh">Platform.sh</a></h3>
-            <h4>Customer Success Engineer</h4>
+            <h4>Senior Cloud Support Engineer</h4>
             <p>Resolving issues related to cloud infrastructure</p>
             <p>Troubleshooting Drupal, ElasticSearch, Magento, MariaDB and Nginx</p>
             <p>Usage of Ansible, Docker, Vagrant, PHP and Python</p>
