--- a/resume.html
+++ b/resume.html
@@ -136,8 +136,8 @@
             <h3><a href="https://platform.sh">Platform.sh</a></h3>
             <h4>Senior Cloud Support Engineer</h4>
             <p>Resolving issues related to cloud infrastructure</p>
-            <p>Troubleshooting Drupal, ElasticSearch, Magento, MariaDB and Nginx</p>
-            <p>Usage of Ansible, Docker, Vagrant, PHP and Python</p>
+            <p>Troubleshooting Drupal, ElasticSearch, Magento, MariaDB, Nginx, RabbitMQ, Redis and Solr</p>
+            <p>Usage of Ansible, Docker, Golang, Vagrant, PHP and Python</p>
             <p>Development of internal tools to automate workload</p>
           </div>
         </div>
